# contract-approval-agent

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
data/: approval_matrix.json  contracts.jsonl  projects.jsonl
data/templates/: 借款担保.md  工程施工.md  工程类.md  担保类.md  服务类.md  设备采购.md  采购类.md
docs/: demo-data.js  index.html  llm-verification-log.md
scripts/: generate_data.py
src/: config.py  graph.py  state.py  tools.py
src/nodes/: audit_log.py  clause_extraction.py  hitl.py  rag.py  route.py  triage.py
src/nodes/guardrails/: counterparty_guard.py  isolation_guard.py  project_guard.py
tests/: test_trajectories.py
