[project]
name = "contract-approval-agent"
version = "0.1.0"
description = "Contract approval routing agent with LangGraph, HITL, and guardrails"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "chromadb>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
